fix: add section spacing

--- a/style.css
+++ b/style.css
@@ -421,6 +421,7 @@ nav .fa-solid {
 
 .get-started .container {
     padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .get-started .row {
@@ -466,6 +467,7 @@ footer {
     background-color: #333333;
     color: white;
     text-align: center;
+    padding-top: 50px;
 }
 
 footer .row {
